v1.3.1 release